# neural-organization

./: .gitignore  README.md  __next._index.txt  _not-found.html  _not-found.txt  concept.md  design-system.html  design-system.json  design.md
.github/workflows/: deploy.yml
_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
docs/: README.md  agentic-ai-framework.md  ax-company-design.md  concept.md  design.md  framework.md  invariant-principles.md  neural-organization-5-layer-framework.md
docs/architecture/: 01-seven-layers.md  03-memory-architecture.md  04-communication.md  07-resilience.md
docs/architecture-archive/: 00-overview.md  02-agent-taxonomy.md  05-governance.md  06-learning.md
docs/claude-code-orchestra/: 00-overview.md  01-three-layers.md  02-five-axioms.md  03-capabilities.md  04-tradeoffs.md  05-implementation-guide.md  README.md
docs/decisions/: 001-product-concept-design.md  002-agi-era-concept-reconstruction.md  005-v1-design-integration.md  006-agent-orchestration-insights-integration.md  007-layer2-dual-mode-reasoning.md  008-state-addressability-path-hierarchy.md  009-phased-introduction-path.md  010-openclaw-differentiation.md  011-invariant-principles-integration.md  README.md
docs/discussion/: debate-log.md
docs/enterprise-functions/: 00-e2e-flows.md
docs/hitl/: README.md  extraction-patterns.md  information-requirements.md
docs/modules/: 00-module-registry.md  04-execution-modules.md
docs/philosophy/: README.md  governance-design.md  interface-design.md  layer1-understanding-design.md  layer2-reasoning-design.md  layer3-execution-design.md  layer4-reflection-design.md  memory-design.md  orchestration-design.md  purpose-design.md  tool-integration-design.md
investors/: __next._tree.txt
references/: academic-validation.md
site/: next.config.ts  package-lock.json  package.json
site/src/app/: layout.tsx  (+2 more)
sub-pj/agentic-ai-analysis/: 00_overview.md  01_concept.md  02_architecture.md  README.md
sub-pj/agentic-ai-hr/: .env.example  .gitignore  00_overview.md  01_concept.md  02_architecture.md  03_implementation.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sub-pj/agentic-ai-hr-system/: 00_overview.md  01_concept.md  README.md  index.html
sub-pj/agentic-ai-hr/docs/: design-v2-neural-org-aligned.md
sub-pj/agentic-ai-hr/docs/01_requirements/: plan.md
sub-pj/agentic-ai-hr/src/: __init__.py  main.py
sub-pj/agentic-ai-hr/src/agents/: __init__.py  compensation_designer.py  context_collector.py  evaluation_designer.py  grading_designer.py  talent_profile_generator.py
sub-pj/agentic-ai-hr/src/api/: __init__.py
sub-pj/agentic-ai-hr/src/api/middleware/: __init__.py
sub-pj/agentic-ai-hr/src/api/routes/: __init__.py  companies.py  policies.py  reviews.py
sub-pj/agentic-ai-hr/src/api/schemas/: __init__.py
sub-pj/agentic-ai-hr/src/config/: settings.py
sub-pj/agentic-ai-hr/src/core/: __init__.py  agent_base.py  hitl_manager.py  orchestrator.py
sub-pj/agentic-ai-hr/src/domain/: __init__.py
sub-pj/agentic-ai-hr/src/domain/models/: __init__.py  company.py  compensation.py  evaluation.py  grading.py
sub-pj/agentic-ai-hr/src/services/: __init__.py  rabbitmq_client.py  redis_client.py  vault_client.py
sub-pj/agentic-ai-hr/src/utils/: logging.py
sub-pj/agentic-ai-management/: 00_overview.md  01_concept.md  02_architecture.md  03_implementation.md  README.md  package-lock.json  package.json
sub-pj/agentic-ai-operations/: .gitignore  00_overview.md  01_concept.md  02_architecture.md  03_implementation.md  README.md  package-lock.json
sub-pj/agentic-ai-sales/: .gitignore  00_concept.md  00_overview.md  01_concept.md  01_pipeline_detail.md  02_architecture.md  02_data_sources.md  03_implementation.md  README.md  pyproject.toml
sub-pj/agentic-ai-sales/config/: settings.yaml
sub-pj/agentic-ai-sales/data/prompts/: slide_generation.yaml
sub-pj/agentic-ai-sales/docs/: design-v2-revenue-cycle.md
sub-pj/agentic-ai-sales/src/spa/: __init__.py  cli.py  llm_client.py  models.py  pptx_generator.py
sub-pj/agentic-ai-sales/src/spa/agents/: __init__.py
sub-pj/agentic-ai-sales/src/spa/templates/: __init__.py
sub-pj/agentic-ai-sales/src/spa/tools/: __init__.py
sub-pj/agentic-ai-sales/tests/: __init__.py  test_models.py
sub-pj/ai-executive-dashboard/: .env.example  package.json
sub-pj/neumann/: tailwind.config.ts
(+168 files in other folders)
